# Budgetter

./: .env.template  .gitignore  compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  controller.py  schemas.py
backend/app/API/: accounts.py  models.py  segments.py  summary.py  transactions.py  users.py
backend/app/router/: accounts.py  models.py  segments.py  summary.py  transactions.py  users.py
backend/app/schemas/: accounts.py  predictions.py  transactions.py  users.py
backend/app/utils/: db.py
database/: db.py  initdb.sql
database/modules/: accounts.py  assignments.py  base.py  models.py  predictions.py  segments.py  summary.py  transactions.py  users.py
database/schemas/: accounts.py  assignments.py  models.py  predictions.py  segments.py  summary.py  transactions.py
frontend/: main.py  package.json  pyproject.toml  style.css  wireframe.drawio
frontend/src/lib/: DonutChart.svelte
frontend/src/routes/: +page.svelte
models/: Dockerfile  __init__.py  pyproject.toml
models/NearestNeighbours/: VotingNN.py
